More descriptive versioning.

--- a/wiki/SoftwareVersioning.wiki
+++ b/wiki/SoftwareVersioning.wiki
@@ -2,6 +2,6 @@
 #labels version
 
 = Version Naming =
-The format will be _a.b.c.d_, where _a.b_ is the FED version, and _c.d_ is the targetted DOSBox version.
+The format will be _a.b.c.d_, where _a.b_ is the FED GUI version, and _c.d_ is the targeted DOSBox version.
 
-For example, _0.5.0.73_ would mean FED is at _0.5_ for DOSBox _0.73_.
+For example, _0.50.0.73_ would mean FED is at _0.50_ for DOSBox _0.73_.
