--- a/trunk/Properties/Resources.resx
+++ b/trunk/Properties/Resources.resx
@@ -133,9 +133,6 @@
   <data name="dosbox" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dosbox.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Game" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Game.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="HelpPage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HelpPage.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -195,5 +192,8 @@
   </data>
   <data name="Search" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Search.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FED" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FED.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
