--- a/wiki/Roadmap.wiki
+++ b/wiki/Roadmap.wiki
@@ -7,10 +7,9 @@
 || 0.5 || Availability on Google Code || 2010/01/31 || 2010/01/30 ||
 || 0.6 || Temporary unsaved config <br /> Game filtering || 2010/02/07 || 2010/02/06 ||
 || 0.70 || Software update || 2010/02/20 || 2010/02/20 ||
-|| 0.75 || Single user mode || 2010/02/27 ||  ||
-|| 0.80 || Feedback mechanism || 2010/03/13 ||  ||
-|| 0.90 || Game tagging || 2010/03 ||  ||
-|| 1.00 || Help pages <br /> Final bug fix and polish || 2010/04 ||  ||
+|| 0.80 || Single user mode <br /> Feedback mechanism || 2010/04/10 ||  ||
+|| 0.90 || Game tagging || 2010/04/17 ||  ||
+|| 1.00 || Help pages <br /> Final bug fix and polish || 2010/05 ||  ||
 || 1.10 || Misc Windows 7 integrations <br /> Some refactoring ||  ||  ||
 || 1.20 || Localization ||  ||  ||
 || 1.30 || Multi-level game tagging ||  ||  ||
